--- a/docs/03.技术/04.博客搭建/01.解决百度无法收录搭建在GitHub上的个人博客的问题.md
+++ b/docs/03.技术/04.博客搭建/01.解决百度无法收录搭建在GitHub上的个人博客的问题.md
@@ -4,7 +4,7 @@ date: 2019-12-25 14:27:01
 permalink: /pages/41f87d890d0a02af
 categories: 
   - 技术
-  - 博客搭建
+  # - 博客搭建
 tags: 
   - null
 author: 
