--- a/docs/03.技术/04.博客搭建/02.使用Gitalk实现静态博客无后台评论系统.md
+++ b/docs/03.技术/04.博客搭建/02.使用Gitalk实现静态博客无后台评论系统.md
@@ -4,7 +4,7 @@ date: 2019-12-25 14:27:01
 permalink: /pages/1da0bf9a988eafe5
 categories: 
   - 技术
-  - 博客搭建
+  # - 博客搭建
 tags: 
   - null
 author: 
